added the gallery section
